--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -13,13 +13,14 @@
   letter-spacing: -1px;
 }
 
-.hero-unit {
-  position: relative;
-  padding: 30px 15px;
-  color: #F5F5F5;
-  text-align: center;
-  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
-  background: #4393B9;
+.box {
+	display: flex;
+	flex-flow: column;
+	align-items: center;
+	justify-content: center;
+	position: relative;
+	margin-top: -20px;
+	height: 400px;
 }
 
 .navbar-text {
