--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -21,6 +21,7 @@ $fa-font-path: '/assets/fonts/font-awesome/';
 /* inject:scss */
 @import 'admin/admin';
 @import 'book/book';
+@import 'book/viewbook/viewbook';
 @import 'main/main';
 @import 'profile/profile';
 @import '../components/footer/footer';
